# Hlemon

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: battery.cpp.25FA26C84D5C9C55.idx  battery.h.2B9B9D8600F57C2D.idx  brightness.cpp.D942FCE2F9629BE1.idx  brightness.h.4471152CC9BB1B21.idx  functions.cpp.7DEB288E988D90A0.idx  functions.h.196D4FC5C30D5062.idx  globals.h.7FC13C5BA14FB398.idx  lemon.cpp.1A79EB57AF85129B.idx  lemonOutput.cpp.A7965B547286348D.idx  lemonOutput.h.B7037341609D80F2.idx
include/: battery.h  brightness.h  clock.h  config.h  functions.h  layout.h  lemonOutput.h  mic.h  volume.h  workspaces.h
src/: battery.cpp  brightness.cpp  clock.cpp  functions.cpp  layout.cpp  lemon.cpp  lemonOutput.cpp  mic.cpp  volume.cpp  workspaces.cpp
